components/Portfolio/Portfolio.module.css
.container {
    padding-top: 10rem;
}


.container h5 {
    margin-bottom: 5rem;

    font-family: var(--font-primary);
    font-size: clamp(1.75rem, 3vw, 4.5rem);
    font-weight: 500;
    text-align: center;
}

.cardGrid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20em, .9fr));
    gap: 1rem;
    justify-content: center;
}

